centred and sized heading, coloured text, added footer, corrected nav bar position/spacing

--- a/Sass/main.css
+++ b/Sass/main.css
@@ -2,32 +2,100 @@ html {
   background-color: #9da2ae;
 }
 
+body {
+  height: 100%;
+  margin: 0px;
+}
+
 .site_header {
   display: flex;
   width: 100%;
   height: 30%;
+  justify-content: space-between;
 }
 
 .mylogo {
-  justify-content: flex-start;
-  width: 30%;
+  position: relative;
+  width: 180px;
   height: 100%;
+  left: -20px;
+  top: -10px;
 }
 
 .nav-bar {
-  justify-content: flex-end;
   font-family: "Arimo";
   font-style: normal;
   font-weight: 100;
-  font-display: swap;
+  display: flex;
+  position: relative;
+  right: 20px;
 }
 .nav-bar ul a {
   text-decoration: none;
   list-style-type: none;
-  margin-bottom: 5px;
   padding: 0;
   color: WHITE;
 }
+.nav-bar ul li {
+  margin: 5px 0;
+}
 .nav-bar ul #home {
   color: #293242;
+}
+
+#name {
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 700;
+  color: white;
+  font-size: 50px;
+  position: relative;
+  top: 130px;
+  left: 20px;
+}
+
+#title {
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 50;
+  color: white;
+  font-size: 30px;
+  position: relative;
+  top: 120px;
+  left: 20px;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-around;
+}
+
+#instagram {
+  width: 100px;
+  height: 100px;
+  z-index: 300;
+  bottom: 0px;
+  position: relative;
+}
+
+#linkedin {
+  width: 100px;
+  height: 100px;
+  z-index: 300;
+  bottom: 0px;
+  position: relative;
+}
+
+#github {
+  width: 100px;
+  height: 100px;
+  z-index: 300;
+  bottom: 0px;
+  position: relative;
 }/*# sourceMappingURL=main.css.map */
